# ble-mqtt-bridge

./: #floorsensor_config.json.full#  .gitignore  CMakeLists.txt  Makefile  README.md  config.json  floorsensor_config.json  floorsensor_config.json.full  floorsensor_config.json.mf  floorsensord  floorsensord.conf  main.cpp  robbyd  toolchain-rpi.cmake
etc/: BaumhausSensorDocumentation.csv  BaumhausSensorDocumentation.ods  floorsensor_config.json  floorsensor_config.json.full
include/: BLEClient.hpp  Bridge.hpp  EventProcessor.hpp  EventReceiver.hpp  Joystick.hpp  MQTTClient.hpp  (+4 more)
src/: BLEClient.cpp  Bridge.cpp  CMakeLists.txt  Joystick.cpp  MQTTClient.cpp  MQTTClientRobby.cpp  SDS011.cpp  SerialPort.cpp  Steering.cpp  floorsensord.cpp  main.cpp  robbyd.cpp
src/alarmlightd/: CMakeLists.txt  README.md  main.cpp
src/bridges/: Bridge.cpp
src/dustsensord/: CMakeLists.txt  README.md  main.cpp
src/endpoints/: BLEClient.cpp
src/floorsensord/: CMakeLists.txt  Config.cpp  README.md  ValueSplitter.cpp  main.cpp
src/floorsensord/generateJsonFromCsv/: CMakeLists.txt  README.md  main.cpp
src/joystickd/: CMakeLists.txt  README.md  Steering.cpp  Steering.hpp  main.cpp
src/libendpoints/: BLEClient.cpp  CMakeLists.txt  MQTTClient.cpp
src/libprocessors/: BluetoothEnabledSwitch.cpp  CMakeLists.txt
src/libsensors/: CMakeLists.txt  Joystick.cpp  SDS011.cpp  SerialPort.cpp
src/playground/: CMakeLists.txt  README.md  testLoguru.cpp
src/robbyd/: CMakeLists.txt  MQTTClientRobby.cpp  MQTTClientRobby.hpp  README.md  main.cpp
src/test/: CMakeLists.txt  configtest.cpp
(+14 files in other folders)
